2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2017-09-05 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out the management client whc(1) in 'src/whc/'.
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Added whprocess(1) in 'src/whprocess/.
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'List Hosts' dialog to whc(1).
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'UNKNOWN_EVENTS' table to the database.
	* Incremented the database version to 2.
	* Added a 'List Unknown Events' dialog to whc(1).
2017-09-06 Fred Gleason <fredg@paravelsystems.com>
	* Enabled the 'make rpm' target.
2017-09-07 Fred Gleason <fredg@paravelsystems.com>
	* Removed the double-click action from the whc(1) main screen.