@@ -34,8 +34,10 @@ dist_whc_SOURCES = accessor.cpp accessor.h\
                    createdb.cpp\
                    editprogram.cpp editprogram.h\
                    listhosts.cpp listhosts.h\
-                   listunknowns.cpp listunknowns.h\
+                   listunknownhosts.cpp listunknownhosts.h\
+                   listunknownuas.cpp listunknownuas.h\
                    program.cpp program.h\
+                   showlogline.cpp showlogline.h\
                    sqltablemodel.cpp sqltablemodel.h\
                    tableview.cpp tableview.h\
                    whc.cpp whc.h
@@ -46,7 +48,9 @@ nodist_whc_SOURCES = cmdswitch.cpp cmdswitch.h\
                      moc_db.cpp\
                      moc_editprogram.cpp\
                      moc_listhosts.cpp\
-                     moc_listunknowns.cpp\
+                     moc_listunknownhosts.cpp\
+                     moc_listunknownuas.cpp\
+                     moc_showlogline.cpp\
                      moc_sqltablemodel.cpp\
                      moc_tableview.cpp\
                      moc_whc.cpp\
