@@ -1,6 +1,6 @@
-// listunknowns.cpp
+// listunknownhosts.cpp
 //
-// List unrecognized user agents
+// List hosts associated with unrecognized user agents
 //
 //   (C) Copyright 2017 Fred Gleason <fredg@paravelsystems.com>
 //
@@ -22,31 +22,32 @@
 #include <stdlib.h>
 
 #include "db.h"
-#include "listunknowns.h"
+#include "listunknownhosts.h"
 
-ListUnknowns::ListUnknowns(QWidget *parent)
+ListUnknownHosts::ListUnknownHosts(QWidget *parent)
   : QDialog(parent)
 {
-  setWindowTitle(tr("WebHound - Unknown User Agents"));
+  setWindowTitle(tr("WebHound - Unknown User Agent Hosts"));
   QFont label_font(font().family(),font().pointSize(),QFont::Bold);
+
+  //
+  // Dialogs
+  //
+  list_showlogline_dialog=new ShowLogLine(this);
 
   //
   // Hosts List
   //
   list_model=new SqlTableModel(this);
   list_model->setQuery(QString("select ")+
-		      "ID,"+
-		      "HOSTNAME,"+
-		      "USER_AGENT,"+
-		      "LAST_SEEN,"+
-		       "LOG_LINE "
-		      "from UNKNOWN_EVENTS order by HOSTNAME,LAST_SEEN");
+		       "ID,"+
+		       "HOSTNAME,"+
+		       "LAST_SEEN "+
+		       "from UNKNOWN_HOSTS order by HOSTNAME");
   list_model->setHeaderData(0,Qt::Horizontal,tr("ID"));
   list_model->setFieldType(0,SqlTableModel::NumericType);
-  list_model->setHeaderData(1,Qt::Horizontal,tr("Host"));
-  list_model->setHeaderData(2,Qt::Horizontal,tr("User Agent"));
-  list_model->setHeaderData(3,Qt::Horizontal,tr("Last Seen"));
-  list_model->setHeaderData(4,Qt::Horizontal,tr("Log Line"));
+  list_model->setHeaderData(1,Qt::Horizontal,tr("Hostname"));
+  list_model->setHeaderData(2,Qt::Horizontal,tr("Last Seen"));
   list_view=new TableView(this);
   list_view->setModel(list_model);
   list_view->resizeColumnsToContents();
@@ -54,47 +55,66 @@ ListUnknowns::ListUnknowns(QWidget *parent)
   //
   // Close Button
   //
+  list_showlogline_button=new QPushButton(tr("Show Log")+"\n"+tr("Entry"),this);
+  list_showlogline_button->setFont(label_font);
+  connect(list_showlogline_button,SIGNAL(clicked()),this,SLOT(showloglineData()));
+
+  //
+  // Close Button
+  //
   list_close_button=new QPushButton(tr("Close"),this);
   list_close_button->setFont(label_font);
   connect(list_close_button,SIGNAL(clicked()),this,SLOT(closeData()));
+
+  setMinimumSize(sizeHint());
 }
 
 
-QSize ListUnknowns::sizeHint() const
+QSize ListUnknownHosts::sizeHint() const
 {
-  return QSize(640,480);
+  return QSize(300,400);
 }
 
 
-int ListUnknowns::exec()
+int ListUnknownHosts::exec(int ua_id)
 {
   list_model->setQuery(QString("select ")+
 		       "ID,"+
 		       "HOSTNAME,"+
-		       "USER_AGENT,"+
-		       "LAST_SEEN,"+
-		       "LOG_LINE "
-		       "from UNKNOWN_EVENTS order by HOSTNAME,LAST_SEEN");
+		       "LAST_SEEN "+
+		       "from UNKNOWN_HOSTS where "+
+		       QString().sprintf("USER_AGENT_ID=%d ",ua_id)+
+		       "order by HOSTNAME");
   list_view->resizeColumnsToContents();
   return QDialog::exec();
 }
 
 
-void ListUnknowns::closeData()
+void ListUnknownHosts::showloglineData()
+{
+  QItemSelectionModel *s=list_view->selectionModel();
+  if(s->hasSelection()) {
+    list_showlogline_dialog->exec(s->selectedRows()[0].data().toInt());
+  }
+}
+
+
+void ListUnknownHosts::closeData()
 {
   done(0);
 }
 
 
-void ListUnknowns::closeEvent(QCloseEvent *e)
+void ListUnknownHosts::closeEvent(QCloseEvent *e)
 {
   closeData();
 }
 
 
-void ListUnknowns::resizeEvent(QResizeEvent *e)
+void ListUnknownHosts::resizeEvent(QResizeEvent *e)
 {
   list_view->setGeometry(10,10,size().width()-20,size().height()-90);
 
+  list_showlogline_button->setGeometry(10,size().height()-70,80,60);
   list_close_button->setGeometry(size().width()-90,size().height()-70,80,60);
 }
